# sensor_log_analyzer

./: .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
data/: POSITION.txt  data.json  data_calib.json  imu_clean.csv  imu_clean.json  imu_dirty.csv  imu_dirty.json  imu_dirty_clean.csv  imu_from_DATA_converted.json
include/sla/: calibration.hpp  clean_writer.hpp  cli.hpp  csv.hpp  csv_split.hpp  number_parse.hpp  report.hpp  report_json.hpp  stats.hpp  time_axis.hpp  util.hpp  welford_stats.hpp  writer.hpp
plots/: residual_metrics.csv  residual_metrics_timeseries.csv
ports/catch2/: portfile.cmake
scripts/: curve_corr_all_axes.py  curve_raw_all_axes.py  hist_residuals_all_axes.py  metrics_and_bars_all_axes.py  metrics_hist_timeseries_from_json_segments.py  plot_time_raw_vs_corr_3axes_interactive.py  residuals_all_axes.py
src/: calibration.cpp  clean_writer.cpp  cli.cpp  csv.cpp  csv_split.cpp  main.cpp  number_parse.cpp  report_json.cpp  stats.cpp  time_axis.cpp  util.cpp  writer.cpp
tests/: test_csv_split.cpp  test_number_parse.cpp  test_time_axis.cpp  test_util.cpp  test_welford.cpp
